syntax = "proto3";

package usersrv;

option go_package = "proto;usersrv";

service UserSrv {
	rpc Login(LoginRequest) returns (UserSrvResponse) {}
	rpc Register(RegisterRequest) returns (UserSrvResponse) {}
	rpc Validation(ValidationRequest) returns (UserSrvResponse) {}
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message RegisterRequest {
	string username = 1;
	string password = 2;
	string tel = 3;
	string sex = 4;
	string validation = 5;
}

message ValidationRequest {
	string tel = 1;
}

message UserSrvResponse {
	int32  status = 1;
	string msg = 2;
}
